# pybash

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
pybash/: __init__.py  __main__.py  builtins.py  script.py  shell.py  utils.py
pybash/builtins/: __init__.py  file.py  shell.py  system.py  text.py
pybash/shell/: __init__.py  completion.py  redirect.py
tests/: test_builtins.py  test_shell.py  test_utils.py
