[project]
name = "pybash"
version = "0.1.0"
description = "A cross-platform bash shell implemented entirely in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "PyBash Contributors" },
]
keywords = ["shell", "bash", "terminal", "cross-platform", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "prompt-toolkit>=3.0.52",
]

[project.urls]
Homepage = "https://github.com/pybash/pybash"
Repository = "https://github.com/pybash/pybash"

[project.scripts]
pybash = "pybash.shell:main"

[tool.setuptools.packages.find]
include = ["pybash*"]
